--- a/Advanced_numbers.ipynb
+++ b/Advanced_numbers.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "Advanced_numbers.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyM5QbFE+/mNYu6Yix5eaRe3",
+      "authorship_tag": "ABX9TyOhTmKZls+p1AWCcX70HIH4",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -29,7 +29,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -64,7 +64,7 @@
         "id": "zAu5MEN8nP2x",
         "outputId": "27d2aaa2-54a9-4c4b-86a6-23078aaa3f1e"
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -88,7 +88,7 @@
         "id": "AJptSEIZneCl",
         "outputId": "1af2177f-a8cb-411b-8b74-6a2daf1c96b5"
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -114,7 +114,7 @@
         "id": "qCyuzyX2nq31",
         "outputId": "6d0340ed-8be7-424a-9e3c-4545ba78e76a"
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -140,7 +140,7 @@
         "id": "RSOQVGddn_LJ",
         "outputId": "becdc1d4-35af-4ae6-dd0d-75eaec0c5c7a"
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -167,7 +167,7 @@
         "id": "TDfx_gGCnq5X",
         "outputId": "9044cad7-e28a-4f13-dfce-1d10a7ce0365"
       },
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -195,7 +195,7 @@
         "id": "TsZTjyycpICK",
         "outputId": "5fdf96d9-59ee-4caa-b30f-b452cd67d82d"
       },
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -205,6 +205,77 @@
           ]
         }
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# abs function\n",
+        "print(abs(-10))\n",
+        "print(abs(-1))\n",
+        "print(abs(10))\n",
+        "print(abs(-8.4))"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "Kib7iB6-tAxZ",
+        "outputId": "cb748ea9-7357-41e3-98fc-469d7608c5e3"
+      },
+      "execution_count": 14,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "10\n",
+            "1\n",
+            "10\n",
+            "8.4\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# round function\n",
+        "print(round(2.1))\n",
+        "print(round(2.6))\n",
+        "print(round(2.5))\n",
+        "print(round(3.2))"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "N4y47RgGtSrb",
+        "outputId": "e92a877e-c362-41dd-8f8e-6a95fda2b1ca"
+      },
+      "execution_count": 15,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "2\n",
+            "3\n",
+            "2\n",
+            "3\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        ""
+      ],
+      "metadata": {
+        "id": "mp8ThIYptAyo"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
