--- a/randomnjumbers.ipynb
+++ b/randomnjumbers.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "randomnjumbers.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyPmMS8DDdNrNnmLvIweM5MS",
+      "authorship_tag": "ABX9TyM7bq642H2xxg0PUUQmQals",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -59,12 +59,20 @@
     {
       "cell_type": "code",
       "source": [
-        ""
+        "import random\n",
+        "\n",
+        "numbers=[]\n",
+        "for i in range (50):\n",
+        "    number=str(random.randint(0,1000))+\"\\n\"\n",
+        "    numbers.append(number)\n",
+        "dosya=open(\"number.txt\",\"w\")\n",
+        "dosya.writelines(numbers)\n",
+        "dosya.close()\n"
       ],
       "metadata": {
         "id": "I8vHBiZ9dUhR"
       },
-      "execution_count": null,
+      "execution_count": 7,
       "outputs": []
     }
   ]
