--- a/List_Comprehension.ipynb
+++ b/List_Comprehension.ipynb
@@ -5,7 +5,8 @@
     "colab": {
       "name": "List_Comprehension.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyMsLEE0M2O/NR7raNaCTpv9",
+      "collapsed_sections": [],
+      "authorship_tag": "ABX9TyMY9QoNXv5Dm4bl4RpXxmr8",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -29,7 +30,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -71,7 +72,7 @@
         "id": "d0JCrTLAy0UU",
         "outputId": "469a3f52-0710-4ea4-9a5d-fcdbdfff0ffd"
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -98,7 +99,7 @@
         "id": "A8L9M5JAzRu-",
         "outputId": "52f8b082-850a-4577-8446-3350824fe03a"
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -125,7 +126,7 @@
         "id": "XVoRdOkVzmPY",
         "outputId": "85836716-c5fc-40c9-fc65-dd30d05df609"
       },
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -151,7 +152,7 @@
         "id": "NFtkzYjk0Bz7",
         "outputId": "85c69ac3-28b1-40c2-8c40-16c5c8185687"
       },
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -170,19 +171,44 @@
         "print(mylist2)"
       ],
       "metadata": {
+        "id": "sM6Od_Js0RpQ",
+        "outputId": "399621b9-b248-4df3-d15c-fae6ba2f83ee",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        },
-        "id": "sM6Od_Js0RpQ",
-        "outputId": "399621b9-b248-4df3-d15c-fae6ba2f83ee"
+        }
       },
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
             "[1, 2, 3, 4, 5, 6, 7, 8, 9]\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# list comprehenson for loop and list\n",
+        "mylist=[i for i in range(1,20) if i%2==0]\n",
+        "print(mylist)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "4Kb6f5l14FsA",
+        "outputId": "b556ee9d-432d-411d-c2a3-628c2c43c26d"
+      },
+      "execution_count": 10,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[2, 4, 6, 8, 10, 12, 14, 16, 18]\n"
           ]
         }
       ]
