--- a/nestedforloop.ipynb
+++ b/nestedforloop.ipynb
@@ -24,7 +24,7 @@
         "id": "0iskFsZoOmbW",
         "outputId": "d5798925-1874-496c-cfa6-7d15c7c75c68"
       },
-      "execution_count": 35,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -67,16 +67,39 @@
     {
       "cell_type": "code",
       "source": [
-        "for a in range(8):\n",
-        "  for i in range(10,0,-1):\n",
-        "    for j in range(1,4):\n",
-        "      print(a,i,j)"
+        "a =-1\n",
+        "yil = 6\n",
+        "for i in range(10,0,-1):\n",
+        "  for j in range(1,4):\n",
+        "    a +=1\n",
+        "    if a > yil:\n",
+        "      break\n",
+        "  #    print(a,i,j)      \n",
+        "    print(a,i,j)  "
       ],
       "metadata": {
-        "id": "HR696Q8jRhhv"
+        "id": "HR696Q8jRhhv",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "2b4ac47d-879c-495e-ed41-d7eca59b6af8"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 28,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "0 10 1\n",
+            "1 10 2\n",
+            "2 10 3\n",
+            "3 9 1\n",
+            "4 9 2\n",
+            "5 9 3\n",
+            "6 8 1\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -96,7 +119,7 @@
         "id": "c8D04oOwPb-w",
         "outputId": "f00eb96c-18e5-44b8-edd1-ad1704be191a"
       },
-      "execution_count": 43,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -483,7 +506,7 @@
       "collapsed_sections": [],
       "name": "nestedforloop.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyPVjbVed/YlsPgs7ZfKIjOE",
+      "authorship_tag": "ABX9TyM3fQXWIMFgE27S/Fv7CXD2",
       "include_colab_link": true
     },
     "kernelspec": {
