--- a/StajKidemDerece.ipynb
+++ b/StajKidemDerece.ipynb
@@ -5,7 +5,8 @@
     "colab": {
       "name": "StajKidemDerece.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyNnTtgJM47wDj9ESNyXyb+J",
+      "collapsed_sections": [],
+      "authorship_tag": "ABX9TyPFznAvLxu5/asbRaMQ4CaX",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -29,7 +30,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -73,24 +74,31 @@
         "  for j in range(1,4):\n",
         "    a +=1\n",
         "    if a > staj:\n",
+        "      \n",
         "      break\n",
-        "  #    print(a,i,j)      \n",
-        "print(a,i,j)  "
+        "    print(a,i,j)\n",
+        "    "
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "unyQK9loNEMf",
-        "outputId": "d2a5994d-6d68-42ca-96b4-fdfcc2c54875"
+        "outputId": "a950402d-1370-4736-f061-e1ebb0478e2b"
       },
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "14 1 1\n"
+            "0 10 1\n",
+            "1 10 2\n",
+            "2 10 3\n",
+            "3 9 1\n",
+            "4 9 2\n",
+            "5 9 3\n",
+            "6 8 1\n"
           ]
         }
       ]
@@ -117,7 +125,7 @@
         "id": "3lQYEpq-LMY5",
         "outputId": "132655a7-8da3-4172-a7f1-54f86ec6cd73"
       },
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
