--- a/Untitled19.ipynb
+++ b/Untitled19.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "Untitled19.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyNWeDNOgihfvQV+58zGasSt",
+      "authorship_tag": "ABX9TyNmdvHCkIs8tSt3j0/8zGwT",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -31,31 +31,54 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "id": "lN1I6LrFm7-X"
+        "id": "if2U1yD5ij8A"
       },
       "outputs": [],
       "source": [
-        "sudoku = [\n",
-        "    [0, 0, 0, 0, 6, 4, 0, 0, 0],\n",
-        "    [7, 0, 0, 0, 0, 0, 3, 9, 0],\n",
-        "    [8, 0, 0, 0, 0, 0, 0, 0, 0],\n",
-        "    [0, 0, 0, 5, 0, 2, 0, 6, 0],\n",
-        "    [0, 8, 0, 4, 0, 0, 0, 0, 0],\n",
-        "    [3, 5, 0, 6, 0, 0, 0, 7, 0],\n",
-        "    [0, 0, 2, 0, 0, 0, 1, 0, 3],\n",
-        "    [0, 0, 1, 0, 5, 9, 0, 0, 0],\n",
-        "    [0, 0, 0, 0, 0, 0, 7, 0, 0]\n",
-        "]\n",
-        "for i in sudoku:\n",
-        "  if sudoku.index(i) == 0 or sudoku.index(i) == 3 or sudoku.index(i) == 6:\n",
-        "    print((\" \" + \"-\")*15, end=\"\\n\")\n",
-        "  for j in range(len(i)):\n",
-        "    print(f\"{i[j]:2d}\", end=\" \")\n",
-        "    if j == 2 or j == 5 :\n",
-        "      print(\"|\", end=\" \")\n",
+        "input random as rd\n",
         "\n",
-        "  print()\n",
-        "print((\" \" + \"-\")*15, end=\"\\n\")"
+        "def check_valid(grid,row,col,num):\n",
+        "  valid = True\n",
+        "  for i in range(9):\n",
+        "    if grid[i][col] == num\n",
+        "      valid = False\n",
+        "    for i in range(9):\n",
+        "      if grid[row][j] == num:\n",
+        "        valid = False\n",
+        "  row_sec = row // 3\n",
+        "  col_sec = row // 3\n",
+        "\n",
+        "  for i in range(3):\n",
+        "    for j in range(3):\n",
+        "      if grid[row_sec*3+i][col_sec*3+j] == num:\n",
+        "        valid = False\n",
+        "        \n",
+        "  return valid\n",
+        "\n",
+        "def sudoku():\n",
+        "  grid = [[\"_\" for x in range(9) for y in range(9)]]\n",
+        "\n",
+        "  print(\"Welcome the sudoku puzzle creator.\")\n",
+        "  inp1 = input(\"Write the hardness level you want. Hard(h), Normal(n)or Easy(e):\").lower().strip()\n",
+        "\n",
+        "  while inp1:\n",
+        "    if inp1 == \"h\":\n",
+        "      hardness = 10\n",
+        "    elif inp == \"n\":\n",
+        "      hardness = 15\n",
+        "    elif inp1 == \"e\":\n",
+        "      hardness = 20\n",
+        "    else:\n",
+        "      inp1 = input(\"Invalid character. Please use h,n or e...\").lower().strip()\n",
+        "\n",
+        "   for i in range(hardness):\n",
+        "     row = rd.randrange(9)\n",
+        "     col = rd.randrange(9)\n",
+        "     num = rd.randrange(1,10)\n",
+        "     while not check_valid(grid,row, col,num) ot grid[row][col] != \"_\"   \n",
+        "        row = rd.randrange(9)\n",
+        "        col = rd.randrange(9)\n",
+        "        num = rd.randrange(1,10)\n"
       ]
     }
   ]
