--- a/lambdafunctions.ipynb
+++ b/lambdafunctions.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "lambdafunctions.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyPzLbGFi29xvyOg5afVYWGC",
+      "authorship_tag": "ABX9TyOvzaSJnj2sq+vh7bWJfBVT",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -325,16 +325,17 @@
         "\n",
         "print(murat_max((5,7,8,98,22)))\n",
         "print(murat_print(\"Ali\"))\n",
-        "print(murat_sorted((5,7,8,98,22)))"
+        "print(murat_sorted((5,7,8,98,22)))\n",
+        "print(murat_bool(1))"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "HFImtJb735cb",
-        "outputId": "6cf055e7-0dd4-4c24-9ffc-380b3a2d2e63"
+        "outputId": "e3b76186-a250-4f73-f11f-5db5ed1bdb9f"
       },
-      "execution_count": 22,
+      "execution_count": 24,
       "outputs": [
         {
           "output_type": "stream",
@@ -343,8 +344,231 @@
             "98\n",
             "Ali\n",
             "None\n",
-            "[5, 7, 8, 22, 98]\n"
+            "[5, 7, 8, 22, 98]\n",
+            "True\n"
           ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def function_generator(n):\n",
+        "    return lambda x : print(n(x))\n",
+        "x = [1,2,3,4,5]\n",
+        "min_func = function_generator(min)\n",
+        "min_func(x)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "Zo54H1az7Fgx",
+        "outputId": "f4730ea2-6123-4d14-b84e-c8e4944c40ee"
+      },
+      "execution_count": 23,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "1\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def equal(x,y,z):\n",
+        "  num =[x,y,z]\n",
+        "  if num.count(max(num,key=num.count))==1:\n",
+        "    return 0\n",
+        "  return num.count(max(num,key=num.count))\n",
+        "\n",
+        "equal(3,4,5)\n",
+        "#equal(3,4,4)\n",
+        "#equal(4,4,4)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "js_WE0EO-TAE",
+        "outputId": "8b0b3846-068d-4cb9-a896-332d1e0e92d3"
+      },
+      "execution_count": 28,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "0"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 28
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def equal(a,b,c) :\n",
+        "    num = [a, b, c]\n",
+        "    sonuc = num.count(max(num, key = num.count))\n",
+        "    if sonuc > 1 :\n",
+        "        return sonuc\n",
+        "    else:\n",
+        "        return 0"
+      ],
+      "metadata": {
+        "id": "0NXCbL4FAbGo"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def equall(*arg) :\n",
+        "    num = list(arg)\n",
+        "    sonuc = num.count(max(num, key = num.count))\n",
+        "    if sonuc > 1 :\n",
+        "        return sonuc\n",
+        "    else:\n",
+        "        return 0\n",
+        "equall(1,2,3,1,4,2,1,1,2)\n"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "dlM2AAWoAhLK",
+        "outputId": "430b2dc9-9763-45ba-abb3-c404a607eb2e"
+      },
+      "execution_count": 29,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "4"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 29
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "equalambda = lambda x,y,z: [x,y,z].count(max([x,y,z], key = [x,y,z].count))\n",
+        "equalambda(1,2,4)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "goucygjCIOKD",
+        "outputId": "064d7480-fb1a-42aa-b0e9-e5ccd250aaf3"
+      },
+      "execution_count": 47,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "1"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 47
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "equalambda = lambda x,y,z: [x,y,z].count(max([x,y,z], key = [x,y,z].count))\\\n",
+        "if [x,y,z].count(max([x,y,z], key = [x,y,z].count))>1 else 0\n",
+        "equalambda(2,1,3)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "Yn7WLtRTIhZY",
+        "outputId": "be2bca1b-5f7e-473c-891e-917e770db525"
+      },
+      "execution_count": 61,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "0"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 61
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "equalambdaa = lambda *arg: arg.count(max(arg, key = arg.count))\\\n",
+        "if arg.count(max(arg, key = arg.count))>1 else 0\n",
+        "equalambdaa(2,1,3,5,3,2,1,4,4,4,2,4)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "s0YeMQCNJ6S-",
+        "outputId": "0e532d95-8ac2-4e68-b0b1-dc6638d11b02"
+      },
+      "execution_count": 64,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "4"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 64
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "equalambdaa = lambda *arg: list(arg).count(max(list(arg), key = list(arg).count))\\\n",
+        "if list(arg).count(max(list(arg), key = list(arg).count))>1 else 0\n",
+        "equalambdaa(2,1,3,5,3,2,1,4,4,4,2,4)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "5-bsrvFrKxw5",
+        "outputId": "2830c80d-74ee-461d-ac15-195cb34f46f5"
+      },
+      "execution_count": 65,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "4"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 65
         }
       ]
     }
