--- a/Someexamples.ipynb
+++ b/Someexamples.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "Someexamples.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyMIO2vsaDrZs/7bExVCrtri",
+      "authorship_tag": "ABX9TyN8kK3/XVzarFHwUuShz2nc",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -29,58 +29,137 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 2,
       "metadata": {
-        "id": "XDR3whL3EeUL"
-      },
-      "outputs": [],
-      "source": [
-        "def count_pairs_int(diff, n_max):\n",
-        "    num1 = 0\n",
-        "    num2 = 0\n",
-        "    for i in range(1,n_max+1):\n",
-        "        for j in range(1,i+1):\n",
-        "            if i%j == 0:\n",
-        "                num1 += 1\n",
-        "            if i+diff % j == 0:\n",
-        "                num2 += 1\n",
-        "        if num1 == num2:\n",
-        "            print(i,i+diff) \n",
-        "\n",
-        "count_pairs_int(3,100)"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "a = \"Mozilla Firefox is an open-source web browser developed by Mozilla.\"\n",
-        "vovels = [\"a\", \"e\",\"i\",\"o\",\"u\"]\n",
-        "v_dicti = {}\n",
-        "c_dicti = {}\n",
-        "for i in a.lower():\n",
-        "  if i.isalpha():\n",
-        "    if i in vovels:\n",
-        "      v_dicti[i] = a.lower().count(i)\n",
-        "    else:\n",
-        "      c_dicti[i] = a.lower().count(i)\n",
-        "print(\"Vowels are: \", v_dicti)\n",
-        "print(\"Consonants are: \",c_dicti)"
-      ],
-      "metadata": {
+        "id": "smDaDhwEM5Ur",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "id": "oN15v5aMEtvK",
-        "outputId": "707e2efa-2f6f-4bdf-87de-7eddeade6de5"
+        "outputId": "aef64c57-4a64-4fe5-e8e7-f43f68886334"
       },
-      "execution_count": 1,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Vowels are:  {'o': 7, 'i': 4, 'a': 3, 'e': 8, 'u': 1}\n",
-            "Consonants are:  {'m': 2, 'z': 2, 'l': 5, 'f': 2, 'r': 4, 'x': 1, 's': 3, 'n': 2, 'p': 2, 'c': 1, 'w': 2, 'b': 3, 'd': 2, 'v': 1, 'y': 1}\n"
+            "{'angry': False, 'happy': True, 'disapointed': True}\n"
+          ]
+        }
+      ],
+      "source": [
+        "'''\n",
+        "Yo can create a dictionary using from a tuple using \n",
+        "the counter class from the collections module.\n",
+        "'''\n",
+        "from collections import Counter\n",
+        "a = Counter(angry=False, happy=True, disapointed=True)\n",
+        "print(dict((a)))"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "a = dict(angry=False, happy=True, disappointed=True)\n",
+        "print(a)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "RxB1YpjqOlhD",
+        "outputId": "ab59806f-ce52-42a5-f297-ec5b87cade08"
+      },
+      "execution_count": 3,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "{'angry': False, 'happy': True, 'disappointed': True}\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "a = [[1,2,3],[4,5,6]]\n",
+        "newlist = []\n",
+        "for i in a:\n",
+        "  for j in i:\n",
+        "    newlist.append(j)\n",
+        "print(newlist)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "VGF3ClkiOzc2",
+        "outputId": "0cf60ae2-ea58-4e59-a26a-f5ab26ed0fd9"
+      },
+      "execution_count": 4,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[1, 2, 3, 4, 5, 6]\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "from functools import reduce\n",
+        "\n",
+        "a = [[1,2,3], [4,5,6]]\n",
+        "\n",
+        "newlist = reduce(lambda acc, x: acc + x, a)\n",
+        "print(reduce(lambda acc, x: acc + x, a))"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "3gfU_KCQPGwb",
+        "outputId": "c1f1787e-c8ba-4d2f-c21e-30702d98b5c3"
+      },
+      "execution_count": 6,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[1, 2, 3, 4, 5, 6]\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "from functools import reduce\n",
+        "\n",
+        "a = [[1,2,3], [4,5,6]]\n",
+        "\n",
+        "newlist = [i for j in a for i in j]\n",
+        "print(newlist)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "oih3opMcPRwH",
+        "outputId": "bc70b2a0-8320-4eea-d137-c62a0fa54675"
+      },
+      "execution_count": 8,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[1, 2, 3, 4, 5, 6]\n"
           ]
         }
       ]
