--- a/Valid_paranthesis.ipynb
+++ b/Valid_paranthesis.ipynb
@@ -5,7 +5,8 @@
     "colab": {
       "name": "Valid paranthesis.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyOy4PRWsAz0QUbJoPGRnaDl",
+      "collapsed_sections": [],
+      "authorship_tag": "ABX9TyN0oOVLuIhjTw7kpMmXmAD+",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -190,6 +191,39 @@
           "text": [
             "They are valid paranthesis.\n"
           ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "para = \"([{({})}]({}))\"\n",
+        "def isValid(s):\n",
+        "  while \"()\" in s or \"[]\" in s or \"{}\" in s:\n",
+        "  #while \"()\" or \"[]\" or \"{}\" in s:\n",
+        "    s = s.replace(\"()\",\"\").replace(\"{}\",\"\").replace(\"[]\",\"\")\n",
+        "  return s ==\"\"\n",
+        "\n",
+        "isValid(para)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "ryo1BMfF91nv",
+        "outputId": "19310bb8-5588-4d15-d185-d247861758af"
+      },
+      "execution_count": 15,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "True"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 15
         }
       ]
     }
