--- a/Someexamples.ipynb
+++ b/Someexamples.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "Someexamples.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyN8kK3/XVzarFHwUuShz2nc",
+      "authorship_tag": "ABX9TyPQ3rpb78NsqeipJ0up9wdH",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -29,137 +29,104 @@
     },
     {
       "cell_type": "code",
+      "execution_count": 1,
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "aHVfg3aypRYK",
+        "outputId": "1253984b-00da-420c-8eb6-e8aa65f814de"
+      },
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[1, 2, 3, 4, 5, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20, 21]\n",
+            "[1, 2, 3, 4, 5, 7, 8, 9, 10, 11, 13, 14, 15, 16, 17, 18, 19, 20, 21]\n",
+            "[1, 2, 3, 4, 5, 7, 8, 9, 10, 11, 13, 14, 15, 16, 17, 19, 20, 21]\n",
+            "[1, 2, 4, 5, 7, 8, 9, 10, 11, 13, 14, 15, 16, 17, 19, 20, 21]\n",
+            "[1, 2, 4, 5, 7, 8, 9, 11, 13, 14, 15, 16, 17, 19, 20, 21]\n",
+            "[1, 2, 4, 5, 7, 8, 9, 11, 13, 14, 15, 16, 19, 20, 21]\n",
+            "[1, 2, 5, 7, 8, 9, 11, 13, 14, 15, 16, 19, 20, 21]\n",
+            "[1, 2, 5, 7, 8, 9, 11, 14, 15, 16, 19, 20, 21]\n",
+            "[1, 2, 5, 7, 8, 9, 11, 14, 15, 16, 19, 20]\n",
+            "[1, 2, 5, 7, 8, 11, 14, 15, 16, 19, 20]\n",
+            "[1, 2, 5, 7, 8, 11, 14, 15, 16, 19]\n",
+            "[1, 2, 5, 7, 8, 14, 15, 16, 19]\n",
+            "[1, 5, 7, 8, 14, 15, 16, 19]\n",
+            "[1, 5, 7, 8, 14, 15, 19]\n",
+            "[1, 5, 7, 8, 15, 19]\n",
+            "[1, 5, 7, 15, 19]\n",
+            "[1, 5, 7, 19]\n",
+            "[5, 7, 19]\n",
+            "[5, 7]\n",
+            "[5]\n"
+          ]
+        }
+      ],
+      "source": [
+        "def survivor(element,step):\n",
+        "    liste = [i for i in range(1,element+1)]\n",
+        "    count = 0\n",
+        "    while len(liste) > 1:\n",
+        "      yeni = liste.copy()\n",
+        "      for i in liste:\n",
+        "        count += 1\n",
+        "        if count == step:\n",
+        "          yeni.remove(i)\n",
+        "          count = 0\n",
+        "          print(yeni)\n",
+        "      liste = yeni\n",
+        "survivor(21,6)"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        ""
+      ],
+      "metadata": {
+        "id": "pYM5HMb0pdz2"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "liste=[1,2,3,4,5,6,7]\n",
+        "\n",
+        "step=3\n",
+        "count=0\n",
+        "while len(liste)>1:\n",
+        "    for i in liste:\n",
+        "        count += 1\n",
+        "        if count % step != 0:\n",
+        "            # continue\n",
+        "        # else:\n",
+        "            liste.remove(i)\n",
+        "  \n",
+        "    break\n",
+        "        \n",
+        "print(liste)\n",
+        "print(count)\n"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "RPo7mmy1pd1O",
+        "outputId": "b2bbbf05-3d70-417e-ac28-ea7cbaab2e7e"
+      },
       "execution_count": 2,
-      "metadata": {
-        "id": "smDaDhwEM5Ur",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "outputId": "aef64c57-4a64-4fe5-e8e7-f43f68886334"
-      },
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "{'angry': False, 'happy': True, 'disapointed': True}\n"
-          ]
-        }
-      ],
-      "source": [
-        "'''\n",
-        "Yo can create a dictionary using from a tuple using \n",
-        "the counter class from the collections module.\n",
-        "'''\n",
-        "from collections import Counter\n",
-        "a = Counter(angry=False, happy=True, disapointed=True)\n",
-        "print(dict((a)))"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "a = dict(angry=False, happy=True, disappointed=True)\n",
-        "print(a)"
-      ],
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "RxB1YpjqOlhD",
-        "outputId": "ab59806f-ce52-42a5-f297-ec5b87cade08"
-      },
-      "execution_count": 3,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "{'angry': False, 'happy': True, 'disappointed': True}\n"
-          ]
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "a = [[1,2,3],[4,5,6]]\n",
-        "newlist = []\n",
-        "for i in a:\n",
-        "  for j in i:\n",
-        "    newlist.append(j)\n",
-        "print(newlist)"
-      ],
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "VGF3ClkiOzc2",
-        "outputId": "0cf60ae2-ea58-4e59-a26a-f5ab26ed0fd9"
-      },
-      "execution_count": 4,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "[1, 2, 3, 4, 5, 6]\n"
-          ]
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "from functools import reduce\n",
-        "\n",
-        "a = [[1,2,3], [4,5,6]]\n",
-        "\n",
-        "newlist = reduce(lambda acc, x: acc + x, a)\n",
-        "print(reduce(lambda acc, x: acc + x, a))"
-      ],
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "3gfU_KCQPGwb",
-        "outputId": "c1f1787e-c8ba-4d2f-c21e-30702d98b5c3"
-      },
-      "execution_count": 6,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "[1, 2, 3, 4, 5, 6]\n"
-          ]
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "from functools import reduce\n",
-        "\n",
-        "a = [[1,2,3], [4,5,6]]\n",
-        "\n",
-        "newlist = [i for j in a for i in j]\n",
-        "print(newlist)"
-      ],
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "oih3opMcPRwH",
-        "outputId": "bc70b2a0-8320-4eea-d137-c62a0fa54675"
-      },
-      "execution_count": 8,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "[1, 2, 3, 4, 5, 6]\n"
+            "[2, 4, 5, 7]\n",
+            "4\n"
           ]
         }
       ]
