--- a/DictComp.ipynb
+++ b/DictComp.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "DictComp.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyNgprRZoWzd6VG5m/l+Hmsr",
+      "authorship_tag": "ABX9TyNXWtHy249/JAt+BpDzpPjm",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -29,15 +29,57 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 1,
       "metadata": {
-        "id": "1XFbRw_a_9Cp"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "1XFbRw_a_9Cp",
+        "outputId": "6ae4db27-2e7b-43be-d65b-f233f882917d"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "{0: 0, 1: 1, 2: 4, 3: 9, 4: 16, 5: 25, 6: 36, 7: 49, 8: 64, 9: 81}"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 1
+        }
+      ],
       "source": [
         "#dictionary compherenson\n",
         "square = { i: i**2 for i in range(10)}\n",
         "square"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "cube = { i: i**3 for i in range(10)}\n",
+        "cube"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "juKzjpM1Ab7J",
+        "outputId": "161d64f7-cd49-4a88-9ae0-461170c20f34"
+      },
+      "execution_count": 2,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "{0: 0, 1: 1, 2: 8, 3: 27, 4: 64, 5: 125, 6: 216, 7: 343, 8: 512, 9: 729}"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 2
+        }
       ]
     }
   ]
