--- a/SomeExamples.ipynb
+++ b/SomeExamples.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "SomeExamples.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyMqfxa3ZtTM5g2h58eiPcRs",
+      "authorship_tag": "ABX9TyNjyfDIF5jnsbxETcQTheR1",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -29,88 +29,123 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": 1,
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 73
-        },
-        "id": "LIuuq1_as1JL",
-        "outputId": "af48b7ae-53b1-4e80-b1cf-d53b266214be"
+        "id": "EhSz6KyBfqD7"
       },
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "How many iterations do you want? : 1\n",
-            "['Full Stack']\n"
-          ]
-        },
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "'Full Stack'"
-            ],
-            "application/vnd.google.colaboratory.intrinsic+json": {
-              "type": "string"
-            }
-          },
-          "metadata": {},
-          "execution_count": 4
-        }
-      ],
+      "outputs": [],
       "source": [
-        "def path_choice():\n",
-        "  import random\n",
-        "  path = [\"Full Stack\", \"Data Science\", \"DevOps\", \"Data Security\"]\n",
-        "  n = int(input(\"How many iterations do you want? : \"))\n",
-        "  my_choice = [random.choice(path) for i in range(1,n + 1)]\n",
-        "  print(my_choice)\n",
-        "  return max(my_choice, key=my_choice.count)\n",
-        "path_choice()"
+        "def last_digit(n1, n2):\n",
+        "  if n2 == 0:\n",
+        "    return 1\n",
+        "  elif n2%4 == 0:\n",
+        "    return ((n1%10)**(4))%10\n",
+        "  else:\n",
+        "    return ((n1%10)**(n2%4))%10"
       ]
     },
     {
       "cell_type": "code",
       "source": [
-        "def josephus_permutation(folk, count=3):\n",
-        "    if len(folk) > 2:\n",
-        "        count = (count-1)%len(folk)\n",
-        "        print(folk, 'deleting: ', folk[count])"
+        "def last_digit(n1, n2):\n",
+        "  if n2==0:\n",
+        "    return 1\n",
+        "  else:\n",
+        "    empty = {}\n",
+        "    for i in range(10):\n",
+        "      y = 1\n",
+        "      for j in range(4):\n",
+        "        y *= i\n",
+        "        if i not in empty:\n",
+        "          empty[i] = [y%10]\n",
+        "        else:\n",
+        "          empty[i].append(y%10)\n",
+        "    return empty[n1%10][n2%4-1]"
       ],
       "metadata": {
-        "id": "mBcvME5JuWxY"
+        "id": "dg1mnsmlfxIe"
       },
-      "execution_count": 5,
+      "execution_count": 3,
       "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
-        "import random\n",
-        "def password_generator(digits):\n",
-        "  password = []\n",
-        "  for i in range(digits):\n",
-        "    chars = [\n",
-        "  chr(random.randint(65, 90)),\n",
-        "  chr(random.randint(92, 122)),\n",
-        "  chr(random.randint(48, 57)),\n",
-        "  chr(random.randint(33, 47)),\n",
-        "  chr(random.randint(58, 64))\n",
-        "  ]\n",
-        "    password.append(random.choice(chars))\n",
-        "  \n",
-        "  random.shuffle(password)\n",
-        "  new_password = ''.join(password)\n",
-        "  return new_password"
+        "def rand(a,b):\n",
+        "  import time\n",
+        "  my_list=[i for i in range(a,b+1)]\n",
+        "  return my_list[int(time.time()*10000000 % ((abs(a-b))+1))]\n",
+        "\n"
       ],
       "metadata": {
-        "id": "lAwS-5CPuoPA"
+        "id": "xHzDhpAcf3S2"
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "veri = [\"a\", \"b\", True, (False, 1), {\"1\" : 2}, [1,2], {\"2\" : \"two\"}, {2, \"3\"}, \"c\", 23, 0]\n",
+        "def rand_ch(x):\n",
+        "  import time\n",
+        "  return x[int(time.time()*10000000 % (len(x)))]\n",
+        "rand_ch(veri)"
+      ],
+      "metadata": {
+        "id": "bcFaOrXKf6E0"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "'''\n",
+        "Input: prices = [7,1,5,3,6,4]\n",
+        "Output: 5\n",
+        "Explanation: Buy on day 2 (price = 1) and sell on day 5 (price = 6), profit = 6-1 = 5.\n",
+        "Note that buying on day 2 and selling on day 1 is not allowed because you must buy before you sell.Input: prices = [7,6,4,3,1]\n",
+        "Output: 0\n",
+        "Explanation: In this case, no transactions are done and the max profit = 0.\n",
+        "'''\n"
+      ],
+      "metadata": {
+        "id": "qo9Mc2DJf9n6"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "veri = [\"a\", \"b\", True, (False, 1), {\"1\" : 2}, [1,2], {\"2\" : \"two\"}, {2, \"3\"}, \"c\", 23, 0]\n",
+        "tipler = [\"int\", \"str\", \"bool\", \"list\", \"tuple\", \"dict\", \"set\"]\n",
+        "toplam = {}.fromkeys(tipler,0)\n",
+        "\n",
+        "for i in range(len(veri)):   \n",
+        "    # type(veri[i]).__name__ MAKE \"<class 'int'>\" to 'int' \n",
+        "    if type(veri[i]).__name__ in list(toplam.keys()): \n",
+        "        toplam[type(veri[i]).__name__] += 1 \n",
+        "print(toplam)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "r1CfePBngh73",
+        "outputId": "06670320-b0d2-4f26-f6de-ad4b06977b70"
+      },
+      "execution_count": 4,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "{'int': 2, 'str': 3, 'bool': 1, 'list': 1, 'tuple': 1, 'dict': 2, 'set': 1}\n"
+          ]
+        }
+      ]
     }
   ]
 }
